hphp/hack/test/typecheck/type_structure_typename.php.exp
File "type_structure_typename.php", line 6, characters 3-16:
The two arguments to `type_structure()` must be:
 - first: `ValidClassname::class` or an object of that class
 - second: a single-quoted string literal containing the name of a type constant of that class
Could not resolve the type constant (Typing[4150])
