hphp/hack/test/typecheck/type_structure_typename.php
<?hh

type MyTypename = int;

function test(): void {
  type_structure(MyTypename::class, 'Nonsense');
}
